fix: updated postman collection, fixed admin call to external service if no data is found in cache
